--- a/VolleyballScoreSheet/Views/BeforeMatch.xaml
+++ b/VolleyballScoreSheet/Views/BeforeMatch.xaml
@@ -9,271 +9,12 @@
     prism:ViewModelLocator.AutoWireViewModel="True">
 
     <StackPanel>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <TextBlock
-                Grid.Row="0"
-                Grid.Column="0"
-                Grid.ColumnSpan="2"
-                Margin="15,5,5,5"
-                VerticalAlignment="Center"
-                FontSize="40"
-                Text="{Binding LeftSideTeamName.Value}"
-                TextAlignment="Left" />
-            <TextBlock
-                Grid.Row="0"
-                Grid.Column="3"
-                Grid.ColumnSpan="2"
-                Margin="5,5,15,5"
-                VerticalAlignment="Center"
-                FontSize="40"
-                Text="{Binding RightSideTeamName.Value}"
-                TextAlignment="Right" />
-            <TextBlock
-                Grid.Row="0"
-                Grid.Column="2"
-                Margin="5,5,15,5"
-                VerticalAlignment="Center"
-                FontSize="30"
-                Text="{Binding Set.Value}"
-                TextAlignment="Center" />
-
-            <TextBlock
-                Grid.Row="1"
-                Grid.Column="0"
-                Margin="15,5,5,5"
-                VerticalAlignment="Center"
-                FontSize="30"
-                Text="{Binding LeftSidePoints.Value}"
-                TextAlignment="Left" />
-            <TextBlock
-                Grid.Row="1"
-                Grid.Column="1"
-                Margin="5,5,5,5"
-                VerticalAlignment="Center"
-                FontSize="30"
-                Text="{Binding LeftSideSets.Value}"
-                TextAlignment="Center" />
-            <TextBlock
-                Grid.Row="1"
-                Grid.Column="2"
-                Margin="5,5,5,5"
-                VerticalAlignment="Center"
-                FontSize="30"
-                Text="16:10:11"
-                TextAlignment="Center" />
-            <TextBlock
-                Grid.Row="1"
-                Grid.Column="3"
-                Margin="5,5,5,5"
-                VerticalAlignment="Center"
-                FontSize="30"
-                Text="{Binding RightSideSets.Value}"
-                TextAlignment="Center" />
-            <TextBlock
-                Grid.Row="1"
-                Grid.Column="4"
-                Margin="5,5,15,5"
-                VerticalAlignment="Center"
-                FontSize="30"
-                Text="{Binding RightSidePoints.Value}"
-                TextAlignment="Right" />
-        </Grid>
-
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*" />
-                <ColumnDefinition Width="5*" />
-                <ColumnDefinition Width="2*" />
-            </Grid.ColumnDefinitions>
-
-
-            <DataGrid
-                Grid.Column="0"
-                Margin="5"
-                IsReadOnly="True"
-                ItemsSource="{Binding LeftTeamPlayer.Value}" />
-            <DataGrid
-                Grid.Column="2"
-                Margin="5"
-                IsReadOnly="True"
-                ItemsSource="{Binding RightTeamPlayer.Value}" />
-
-
-            <Grid
-                Grid.Column="1"
-                Height="300"
-                Margin="5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="10" />
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="10" />
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="10" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="10" />
-                    <RowDefinition />
-                    <RowDefinition Height="10" />
-                </Grid.RowDefinitions>
-
-                <Grid
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    Grid.ColumnSpan="5"
-                    Background="White" />
-                <Grid
-                    Grid.Row="5"
-                    Grid.Column="0"
-                    Grid.ColumnSpan="5"
-                    Background="White" />
-                <Grid
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Background="White" />
-                <Grid
-                    Grid.Row="1"
-                    Grid.Column="2"
-                    Background="White" />
-                <Grid
-                    Grid.Row="1"
-                    Grid.Column="4"
-                    Background="White" />
-
-                <Grid
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    Background="DarkOrange">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-                    <TextBlock
-                        Grid.Row="2"
-                        Grid.Column="0"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding LeftSideRotation.Value[0]}"
-                        TextAlignment="Center" />
-                    <TextBlock
-                        Grid.Row="2"
-                        Grid.Column="1"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding LeftSideRotation.Value[1]}"
-                        TextAlignment="Center" />
-                    <TextBlock
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding LeftSideRotation.Value[2]}"
-                        TextAlignment="Center" />
-                    <TextBlock
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding LeftSideRotation.Value[3]}"
-                        TextAlignment="Center" />
-                    <TextBlock
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding LeftSideRotation.Value[4]}"
-                        TextAlignment="Center" />
-                    <TextBlock
-                        Grid.Row="1"
-                        Grid.Column="0"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding LeftSideRotation.Value[5]}"
-                        TextAlignment="Center" />
-                </Grid>
-                <Grid
-                    Grid.Row="1"
-                    Grid.Column="3"
-                    Background="DarkOrange">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-                    <TextBlock
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding RightSideRotation.Value[0]}"
-                        TextAlignment="Center" />
-                    <TextBlock
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding RightSideRotation.Value[1]}"
-                        TextAlignment="Center" />
-                    <TextBlock
-                        Grid.Row="1"
-                        Grid.Column="0"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding RightSideRotation.Value[2]}"
-                        TextAlignment="Center" />
-                    <TextBlock
-                        Grid.Row="2"
-                        Grid.Column="0"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding RightSideRotation.Value[3]}"
-                        TextAlignment="Center" />
-                    <TextBlock
-                        Grid.Row="2"
-                        Grid.Column="1"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding RightSideRotation.Value[4]}"
-                        TextAlignment="Center" />
-                    <TextBlock
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        VerticalAlignment="Center"
-                        FontSize="50"
-                        Text="{Binding RightSideRotation.Value[5]}"
-                        TextAlignment="Center" />
-                </Grid>
-            </Grid>
-
-        </Grid>
-
         <Button
             Height="80"
             Margin="5,20,5,5"
             Command="{Binding LineUpCommand}"
             Content="Line UP"
-            FontSize="30" />
+            FontSize="30"
+            Style="{StaticResource LightButton}" />
     </StackPanel>
 </UserControl>
