--- a/VolleyballScoreSheet/Views/CoinToss.xaml
+++ b/VolleyballScoreSheet/Views/CoinToss.xaml
@@ -1,32 +1,59 @@
-﻿<UserControl x:Class="VolleyballScoreSheet.Views.CoinToss"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="VolleyballScoreSheet.Views.CoinToss"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:VolleyballScoreSheet.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    prism:ViewModelLocator.AutoWireViewModel="True"
+    mc:Ignorable="d">
     <StackPanel>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
-            <TextBlock  Margin="5,0,5,0" Grid.Row="0" Grid.Column="0" Text="{Binding LeftTeam}" FontSize="40"></TextBlock>
-            <TextBlock  Margin="5,0,5,0" Grid.Row="0" Grid.Column="1" Text="{Binding RightTeam}" FontSize="40"></TextBlock>
-
-            <TextBlock  Margin="5,0,5,0" Grid.Row="1" Grid.Column="0" Text="{Binding LeftTeamToss.Value}" FontSize="30"></TextBlock>
-            <TextBlock  Margin="5,0,5,0" Grid.Row="1" Grid.Column="1" Text="{Binding RightTeamToss.Value}" FontSize="30"></TextBlock>
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="0"
+                Margin="5,0,5,0"
+                FontSize="30"
+                Text="{Binding LeftTeamToss.Value}" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="5,0,5,0"
+                FontSize="30"
+                Text="{Binding RightTeamToss.Value}" />
 
 
         </Grid>
-        <Button Margin="5,10,5,0" Command="{Binding SwitchCourtCommand}">Switch Court</Button>
-        <Button  Margin="5,5,5,0" Command="{Binding SwitchServerCommand}">Switch Server</Button>
-        <Button  Margin="5,20,5,0" Command="{Binding NextCommand}">次へ</Button>
+        <Button
+            Margin="5,10,5,0"
+            Padding="10"
+            Command="{Binding SwitchCourtCommand}"
+            Content="Switch Court"
+            FontSize="30"
+            Style="{StaticResource LightButton}" />
+        <Button
+            Margin="5,5,5,0"
+            Padding="10"
+            Command="{Binding SwitchServerCommand}"
+            Content="Switch Server"
+            FontSize="30"
+            Style="{StaticResource LightButton}" />
+        <Button
+            Margin="5,20,5,5"
+            Padding="10"
+            Command="{Binding NextCommand}"
+            Content="次へ"
+            FontSize="30"
+            Style="{StaticResource LightButton}" />
     </StackPanel>
 </UserControl>
